--- a/r4babs2/week-6/overview.qmd
+++ b/r4babs2/week-6/overview.qmd
@@ -5,22 +5,30 @@ toc: true
 toc-location: right
 ---
 
-Congratulations on making it to the end of the stage 1 Data Analysis in R teaching!
+Congratulations on making it to the last week of the stage 1 Data 
+Analysis in R!
 
 ![Artwork by @allison_horst: ](images/code-hero.gif){fig-alt="Animated gif with pastel lines in the background. The words 'CODE HERO' in bold black text scroll across repeatedly." width="600"}
 
 
-This week you will learn how to test whether there is an association between two categorical variables using the chi-squared contingency test and how to test whether there is an association between two continuous variables using the correlation test.
+This week you will learn how to test whether there is an association 
+between two categorical variables using the chi-squared contingency test
+and how to test whether there is an association between two continuous 
+variables using the correlation test.
 
 ### Learning objectives
 
 The successful student will be able to:
 
--   Explain the principles of correlation and chi-squared contingency tests
+-   Explain the principles of correlation and chi-squared 
+    contingency tests
 -   Select, appropriately correlation and chi-squared contingency tests
--   Apply and interpret a correlation and chi-squared contingency tests in R
--   Appreciate the difference between statistical significance and biological significance
--   Summarise and illustrate with appropriate R figures test results scientifically
+-   Apply and interpret a correlation and chi-squared contingency 
+    tests in R
+-   Appreciate the difference between statistical significance and 
+    biological significance
+-   Summarise and illustrate with appropriate R figures test 
+    results scientifically
 
 ### Instructions
 
@@ -31,15 +39,18 @@ The successful student will be able to:
 
 2.  [Workshop](workshop.qmd)
     
-    i.   💻 Test whether there is an association between the heights of sibling pairs.
+    i.   💻 Test whether there is an association between the heights 
+         of sibling pairs.
     ii.  💻 Learn about the effect of sample size on correlation
-    iii. 💻 Apply the Spearman rank correlation test to the heights of sibling pairs.
-    iv.  💻 Test whether there is an association between blood type and peptic ulcers.
+    iii. 💻 Apply the Spearman rank correlation test to the heights 
+         of sibling pairs.
+    iv.  💻 Test whether there is an association between blood type 
+         and peptic ulcers.
     v.   💻 Repeat iv. using untabulated data.
 
 3.  [Consolidate](study_after_workshop.qmd)
 
-    i.  💻 Test whether there the proportion of slug colour morphs is the same 
-          in two populations.
+    i.  💻 Test whether there the proportion of slug colour morphs is 
+        the same in two populations.
     ii. 💻 Repeat i. using untabulated data.
 
